# ringhopper-old

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/invader/: Cargo.toml  build.rs
src/invader/macros/: Cargo.toml
src/invader/src/: cmd.rs  engine.rs  error.rs  file.rs  lib.rs  main.rs  string.rs  terminal.rs
src/invader/src/cmd/: args.rs  mod.rs  verb.rs
src/invader/src/cmd/args/: mod.rs  tests.rs
src/invader/src/cmd/verb/: mod.rs
src/invader/src/crc/: mod.rs
src/invader/src/engine/: h1.rs  hce.rs  types.rs
src/invader/src/engine/h1/: p8.rs  types.rs  unicode_string_list.rs
src/invader/src/engine/h1/types/: serialize.rs  tag.rs
src/invader/src/engine/h1/types/serialize/: tests.rs  unicode_string_list_test.unicode_string_list
src/invader/src/engine/h1/verbs/: string.rs  unicode_strings.rs
src/invader/src/engine/hce/: p8.rs  types.rs
src/invader/src/engine/hce/types/: groups.rs  serialize.rs
src/invader/src/engine/hce/types/serialize/: tests.rs
src/invader/src/engine/types/: color.rs  tag.rs  trig.rs
src/invader/src/engine/types/color/: tests.rs
src/invader/src/engine/types/tag/: tests.rs
src/invader/src/engine/types/trig/: tests.rs
src/invader/src/engines/: mod.rs
src/invader/src/engines/h1/: mod.rs  unicode_string_list.rs
src/invader/src/engines/h1/definitions/: mod.rs
src/invader/src/engines/h1/definitions/h1_code_generator/: Cargo.toml
src/invader/src/engines/h1/definitions/h1_code_generator/json/: actor.json  actor_variant.json  antenna.json  biped.json  contrail.json  damage_effect.json  decal.json  detail_object_collection.json  device.json  device_control.json  dialogue.json  effect.json  equipment.json  flag.json  fog.json  font.json  globals.json  glow.json  grenade_hud_interface.json  hud_globals.json  hud_interface_types.json  hud_number.json  item.json  item_collection.json  lens_flare.json  light.json  light_volume.json  lightning.json  material_effects.json  meter.json  model.json  model_animations.json  model_collision_geometry.json  multiplayer_scenario_description.json  object.json  particle.json  particle_system.json  preferences_network_game.json  projectile.json  scenario.json  (+23 more)
src/invader/src/engines/h1/definitions/h1_code_generator/src/: lib.rs
src/invader/src/engines/h1/tag_loading/serialize/: mod.rs  tests.rs
src/invader/src/engines/h1/types/: groups.rs  mod.rs  supergroups.rs
src/invader/src/engines/h1/verbs/: collection.rs  convert.rs  mod.rs  strings.rs  strip.rs  unicode_strings.rs
src/invader/src/error/: mod.rs
src/invader/src/file/: mod.rs
src/invader/src/invader_macros/: Cargo.toml
src/invader/src/invader_macros/src/: lib.rs
src/invader/src/invader_macros/src/terminal/: tty.rs
src/invader/src/terminal/: tty.rs
src/invader/src/types/: mod.rs
src/invader/src/types/color/: tests.rs
src/invader/src/types/tag/: mod.rs  tests.rs
src/invader/src/types/trig/: tests.rs
src/invader/src/verbs/: collection.rs  convert.rs  mod.rs  strip.rs  unicode_strings.rs
src/invader/src/verbs/bitmap/: loader.rs  mod.rs  tests.rs
src/invader/src/verbs/collection/: mod.rs
src/invader/src/verbs/convert/: mod.rs
src/invader/src/verbs/lightmap/: mod.rs
src/invader/src/verbs/list_engines/: mod.rs
src/invader/src/verbs/normalize_lightmaps/: mod.rs
src/invader/src/verbs/recover/: bitmap.rs  hud_message_text.rs  mod.rs  model.rs  scenario.rs  string_list.rs  tag_collection.rs
src/invader/src/verbs/recover_processed/: bitmap.rs  mod.rs  model.rs
src/invader/src/verbs/script/: mod.rs
src/invader/src/verbs/sound/: mod.rs  util.rs
src/invader/src/verbs/strip/: mod.rs
src/invader/src/verbs/unicode_strings/: mod.rs
src/invader/src/verbs/upscale_hud/: mod.rs
src/ringhopper/: Cargo.toml  build.rs
src/ringhopper/proc/: Cargo.toml
src/ringhopper/proc/json-definitions/: bitmap.json  decal.json  grenade_hud_interface.json  hud_globals.json  hud_interface_types.json  model_animations.json  particle_system.json  shader_environment.json  sound.json  unit.json  unit_hud_interface.json  weapon.json  weapon_hud_interface.json
src/ringhopper/proc/json-targets/: halo macintosh retail.json  halo mcc cea.json  halo pc retail.json  halo pc.json  halo xbox ntsc demo.json  halo xbox ntsc jp.json  halo xbox ntsc tw.json  halo xbox ntsc us.json  halo xbox pal.json
src/ringhopper/proc/src/: lib.rs  strings.json
src/ringhopper/src/: lib.rs
src/ringhopper/src/bitmap/: mod.rs
src/ringhopper/src/bitmap/color_plate/: mod.rs  sprite.rs
src/ringhopper/src/bitmap/color_plate/tests/: mod.rs  test_cube_color_plate.tif  test_cube_color_unrolled.tif
src/ringhopper/src/bitmap/compression/: mod.rs  tests.rs
src/ringhopper/src/bitmap/postprocessing/: mod.rs
src/ringhopper/src/cmd/: mod.rs
src/ringhopper/src/cmd/args/: mod.rs
src/ringhopper/src/cmd/verb/: mod.rs
src/ringhopper/src/crc/: mod.rs
src/ringhopper/src/engines/: mod.rs
src/ringhopper/src/engines/h1/: mod.rs
src/ringhopper/src/engines/h1/definitions/: mod.rs
src/ringhopper/src/engines/h1/definitions/h1_code_generator/: Cargo.toml
src/ringhopper/src/engines/h1/definitions/h1_code_generator/json/: actor.json  (+9 more)
src/ringhopper/src/engines/h1/engine_target/: mod.rs
src/ringhopper/src/engines/h1/engine_target/h1_engine_target_codegen/: Cargo.toml
src/ringhopper/src/engines/h1/jms/: mod.rs
src/ringhopper/src/engines/h1/jms/tests/: mod.rs  test_cube.jms
src/ringhopper/src/engines/h1/p8/: mod.rs
src/ringhopper/src/engines/h1/tag_loading/serialize/: mod.rs  tests.rs
src/ringhopper/src/engines/h1/types/: groups.rs  mod.rs  model.rs  scenario.rs
src/ringhopper/src/error/: mod.rs
src/ringhopper/src/file/: mod.rs
src/ringhopper/src/types/: mod.rs
src/ringhopper/src/types/color/: mod.rs  tests.rs
src/ringhopper/src/types/tag/: mod.rs  tests.rs
src/ringhopper/src/types/trig/: mod.rs
src/strings/: Cargo.toml
src/strings/src/: lib.rs  strings.json
src/tools/invader-h1/: Cargo.toml  build.rs
src/tools/invader-h1/src/: main.rs
src/tools/invader_hce/: Cargo.toml  build.rs
src/tools/invader_hce/src/: main.rs
(+9 files in other folders)
