[package]
name = "invader"
authors = ["Snowy Mouse"]
version = "0.1.0"
autobins = false
description = "The free Halo: Combat Evolved modding toolkit"
license = "GPL-3.0-only"
build = "build.rs"
repository = "https://git.sr.ht/~snowymouse/invader"
publish = false

[dependencies]
ringhopper = { path = "../ringhopper" }
macros = { path = "macros", package = "ringhopper-macros" }
ringhopper-proc = { path = "../ringhopper/proc", package = "ringhopper-proc" }
symphonia = { version = "0.5.1", features = ["wav", "flac", "pcm"], default-features = false }
jpegxl-rs = { version = "0.7.0", default-features = false, features = ["vendored"], optional = true }
encoding = "0.2"
tiff = "0.8"
png = "0.17"
flate2 = "1.0"
rubato = "0.12"
vorbis_rs = "0.1"
xbadpcm = "0.1"
libsamplerate-sys = "0.1.12"

[features]
default = []
jxl = ["dep:jpegxl-rs"]
all = ["jxl"]

[[bin]]
name = "invader"
path = "src/main.rs"
doc = false

[build-dependencies]
embed-resource = "1.7"
