[package]
name = "invader"
authors = ["Snowy Mouse"]
version = "0.1.0"
autobins = false
description = "The free Halo: Combat Evolved modding toolkit"
license = "GPL-3.0-only"
build = "build.rs"
repository = "https://git.sr.ht/~snowymouse/invader"
publish = false
edition = "2021"

[dependencies]
ringhopper = { path = "../ringhopper" }
macros = { path = "macros", package = "ringhopper-macros" }
ringhopper-proc = { path = "../ringhopper/proc", package = "ringhopper-proc" }
symphonia = { version = "0.5.3", features = ["wav", "flac", "pcm"], default-features = false }
jxl-oxide = "0.11.0"
encoding = "0.2"
tiff = "0.9"
png = "0.17"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
rubato = "0.14"
vorbis_rs = "0.3"
xbadpcm = "0.1"
libsamplerate-sys = "0.1.12"

[[bin]]
name = "invader"
path = "src/main.rs"
doc = false

[build-dependencies]
embed-resource = "2.3"
