[package]
name = "ringhopper"
authors = ["Snowy Mouse"]
version = "0.1.3"
description = "Library for modding Halo: Combat Evolved"
license = "GPL-3.0-only"
repository = "https://git.sr.ht/~snowymouse/invader"
exclude = ["proc"]

[dependencies]
encoding = "0.2"
rat-in-a-tube = "0.2.2"
texpresso = "2.0"
ringhopper-proc = { path = "proc", package = "ringhopper-proc", version = "0.1.3" }

[dev-dependencies]
tiff = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem"
]
