[package]
name = "strings"
version = "0.1.0"
description = "Strings used in Invader's text output"
license = "GPL-3.0-only"

[lib]
doc = false
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
