[package]
name = "ringhopper-strings"
authors = ["Snowy Mouse"]
version = "0.1.0"
description = "Strings used in Ringhopper's text output"
license = "GPL-3.0-only"
repository = "https://git.sr.ht/~snowymouse/invader"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
