[package]
name = "ringhopper-proc"
authors = ["Snowy Mouse"]
version = "0.1.0"
description = "Procedural macros for the Ringhopper Halo modding crate"
license = "GPL-3.0-only"

[lib]
doc = false
proc-macro = true

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
