[package]
name = "ringhopper-proc"
authors = ["Snowy Mouse"]
version = "0.1.1"
description = "Procedural macros for the Ringhopper Halo modding crate"
license = "GPL-3.0-only"

[lib]
doc = false
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
