[package]
name = "invader-h1"
version = "0.1.0"
autobins = false
description = "The free Halo: Combat Evolved modding toolkit"
license = "GPL-3.0-only"
build = "build.rs"

[dependencies]
invader = { path = "../../invader" }

[[bin]]
name = "invader"  # we build invader-h1 as invader
path = "src/main.rs"
doc = false

[build-dependencies]
embed-resource = "1.7"
