[package]
name = "invader_macros"
version = "0.1.0"
description = "Macros for Invader"
license = "GPL-3.0-only"

[lib]
name = "invader_macros"
doc = false

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.39"
features = [
    "Win32_Foundation",
    "Win32_System_Console"
]
